--- a/notebooks/project_report_mcga.ipynb
+++ b/notebooks/project_report_mcga.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 150,
    "id": "a23f4102",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 151,
    "id": "b7e744af",
    "metadata": {},
    "outputs": [],
@@ -205,6 +205,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21cdd881",
+   "metadata": {},
+   "source": [
+    "### `name_from_smiles`\n",
+    "\n",
+    "This function provides a simple way to retrieve the **IUPAC name** of a molecule from its SMILES string using the PubChem database (via `pubchempy`).  \n",
+    "\n",
+    "It is especially useful in notebooks for:\n",
+    "- Converting user-drawn or predicted SMILES into readable compound names  \n",
+    "- Annotating molecules during reaction analysis  \n",
+    "- Making output more interpretable in reports or tables  \n",
+    "\n",
+    "Returns `None` if the structure is unknown or the query fails.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "1eae1d86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: aspirin\n",
+      "SMILES: CC(=O)OC1=CC=CC=C1C(=O)O\n"
+     ]
+    }
+   ],
+   "source": [
+    "from app import name_to_smiles\n",
+    "\n",
+    "# Minimal test\n",
+    "chemical_name = \"aspirin\"\n",
+    "smiles = name_to_smiles(chemical_name)\n",
+    "print(f\"Name: {chemical_name}\\nSMILES: {smiles}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d2224dd6",
    "metadata": {},
    "source": [
@@ -217,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "id": "1cf9a5d2",
    "metadata": {},
    "outputs": [
@@ -353,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "c60e1425",
    "metadata": {},
    "outputs": [
@@ -385,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "id": "bada96dc",
    "metadata": {},
    "outputs": [
@@ -554,7 +595,11 @@
     "\n",
     "We also encountered difficulties while trying to use the ECOTOX database to retrieve LD50 values. The dataset was massive; over 1 GB across 53 text files and parsing it proved more complicated than expected. Critical metrics like LD50 or BAF were inconsistently formatted and scattered across multiple files, making automation unreliable. Attempts to retrieve LD50 data directly from PubChem also failed. Ultimately, integrating toxicological data at scale required far more preprocessing and structure than we initially anticipated.\n",
     "\n",
-    "When attempting to balance certain reactions using the chempy.balance_stoichiometry function, we encountered failures in producing integer stoichiometric coefficients. A notable example was the synthesis of aspirin (salicylic acid + acetic anhydride → aspirin + acetic acid), where Chempy returned symbolic expressions with variables (e.g., x1) instead of numeric values. Despite confirming that the molecular formulas and SMILES mappings were correctly parsed, the output included terms like 11 - 2*x1 and 8*x1 + 1, making the result unusable. Since key metrics such as atom economy and E-factor rely on concrete numbers, this symbolic output triggered type conversion and formatting errors in downstream calculations. Although the reaction is well-established with a 1:1:1:1 ratio, Chempy was unable to resolve it numerically\n"
+    "When attempting to balance certain reactions using the chempy.balance_stoichiometry function, we encountered failures in producing integer stoichiometric coefficients. A notable example was the synthesis of aspirin (salicylic acid + acetic anhydride → aspirin + acetic acid), where Chempy returned symbolic expressions with variables instead of numeric values.\n",
+    "\n",
+    "`Error: Balancing produced symbolic variables: OrderedDict([('C7H6O3', 11 - 2*x1), ('C4H6O3', 8*x1 + 1)]), OrderedDict([('C9H8O4', 9), ('C2H4O2', 9*x1)])` \n",
+    "\n",
+    "Despite confirming that the molecular formulas and SMILES mappings were correctly parsed, the output included terms like 11 - 2*x1 and 8*x1 + 1, making the result unusable. Since key metrics such as atom economy and E-factor rely on concrete numbers, this symbolic output triggered type conversion and formatting errors in downstream calculations. Although the reaction is well-established with a 1:1:1:1 ratio, Chempy was unable to resolve it numerically\n"
    ]
   }
  ],
